website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-sp01/question-processing-system/k8s/policies/13-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policies
  namespace: question-system
spec:
  podSelector:
    matchLabels:
      app: fastapi-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis
  - to:
    - podSelector:
        matchLabels:
          app: kafka-kraft
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: message-processor-policy
  namespace: question-system
spec:
  podSelector:
    matchLabels:
      app: message-processor
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: kafka-kraft
  - to:
    - podSelector:
        matchLabels:
          app: postgres-db
